# popctl

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  README.md  SECURITY.md  SPEC.md  devops.py  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
app/popctl/: __init__.py  __main__.py
app/popctl/advisor/: __init__.py  _djinn_backend.py  config.py  container.py  docker.py  exchange.py  history.py  paths.py  prompts.py  runner.py  scanning.py  session_protocol.py  workspace.py
app/popctl/alerts/: __init__.py  config.py  daemon.py  notifier.py  protocol.py  render.py
app/popctl/backup/: __init__.py  backup.py  config.py  restore.py
app/popctl/cli/: __init__.py  display.py  main.py  manifest.py  types.py
app/popctl/cli/commands/: __init__.py  advisor.py  alerts.py  apply.py  backup.py  config.py  diff.py  doctor.py  dotfiles.py  fs.py  history.py  init.py  manifest.py  scan.py  setup.py  sync.py  undo.py
app/popctl/configs/: __init__.py  history.py  manifest.py  models.py  operator.py  protected.py  scanner.py
app/popctl/core/: __init__.py  actions.py  baseline.py  diff.py  executor.py  manifest.py  paths.py  state.py  theme.py
app/popctl/data/: advisor.toml  theme.toml
app/popctl/data/prompts/: decisions_schema.txt  headless.txt  initial_prompt.txt  session_claude_md.txt  session_claude_md_configs.txt  session_claude_md_dotfiles.txt  session_claude_md_filesystem.txt
app/popctl/data/templates/: alerts.toml  popctl-alerts.service
app/popctl/domain/: __init__.py  history.py  manifest.py  models.py  ownership.py  protected.py
app/popctl/dotfiles/: config.py  desktop.py  discovery.py  materialize.py  repo.py  secret_filter.py  state.py
app/popctl/filesystem/: __init__.py  history.py  manifest.py  models.py  operator.py  protected.py  scanner.py
app/popctl/models/: __init__.py  action.py  backup.py  history.py  manifest.py  package.py  scan_result.py  types.py
app/popctl/operators/: __init__.py  apt.py  base.py  flatpak.py  snap.py
app/popctl/scanners/: __init__.py  apt.py  base.py  flatpak.py  snap.py
app/popctl/sources/: capture.py  diff.py  keytrust.py  models.py  phase.py  preflight.py  provision.py
app/popctl/utils/: __init__.py  desktop.py  formatting.py  shell.py  snap.py
scripts/: fix_failed_purges.py
tests/: conftest.py
tests/fixtures/sources/: keytrust-multi-key-public.asc  keytrust-multi-key-secret.asc
tests/integration/: test_advisor.py
tests/unit/: conftest.py
tests/unit/advisor/: __init__.py  test_config.py  test_container.py  test_docker.py  test_exchange.py  test_paths.py  test_prompts.py  test_runner.py  test_workspace.py
tests/unit/alerts/: test_config.py  test_daemon.py  test_notifier.py  test_protocol.py  test_render.py
tests/unit/backup/: __init__.py  test_backup.py  test_restore.py
tests/unit/cli/: test_advisor.py  test_advisor_workflow.py  test_alerts_cmd.py  test_apply.py  test_backup_cmd.py  test_config.py  test_diff.py  test_display.py  test_doctor.py  test_dotfiles_cmd.py  test_fs.py  test_history.py  test_init.py  test_scan.py  test_setup.py  test_source_phase_integration.py  test_sync.py  test_undo.py
tests/unit/configs/: test_history.py  test_manifest.py  test_models.py  test_operator.py  test_protected.py  test_scanner.py
tests/unit/core/: test_actions.py  test_baseline.py  test_diff.py  test_executor.py  test_manifest.py  test_paths.py  test_state.py  test_theme.py
tests/unit/domain/: test_history.py  test_manifest.py  test_models.py  test_ownership.py  test_protected.py
tests/unit/dotfiles/: conftest.py  test_config.py  test_desktop.py  test_discovery.py  test_materialize.py  test_repo.py  test_secret_filter.py  test_state.py
tests/unit/filesystem/: test_history.py  test_manifest.py  test_models.py  test_operator.py  test_protected.py  test_scanner.py
tests/unit/models/: test_action.py  test_backup.py  test_history.py  test_manifest.py  test_package.py
tests/unit/operators/: __init__.py  test_apt.py  test_base.py  test_flatpak.py  test_snap.py
tests/unit/scanners/: conftest.py  test_apt.py  test_base.py  test_flatpak.py  test_snap.py
tests/unit/sources/: test_capture.py  test_diff.py  test_keytrust.py  test_models.py  test_preflight_phase.py  test_provision.py
tests/unit/utils/: test_desktop.py  test_formatting.py  test_shell.py
