[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["popctl"]

[tool.hatch.build.targets.wheel.force-include]
"devops.py" = "devops.py"

[project]
name = "popctl"
version = "0.1.0"
description = "Comprehensive and AI augmented OS management system to maintain a lean and functional local setup"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[project.urls]
Homepage = "https://github.com/w2kr1stn/popctl"
Repository = "https://github.com/w2kr1stn/popctl"

[project.scripts]
fmt = "devops:format_code"
test = "devops:test"
clean = "devops:clean"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "I",   # isort
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "B008", # FastAPI Depends() pattern in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
extraPaths = ["pulumi"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportUnusedFunction = "warning"
reportPrivateUsage = "warning"
reportConstantRedefinition = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportGeneralTypeIssues = "error"

[tool.bandit]
exclude_dirs = [".venv", "venv", "tests"]
skips = []
# Fail on Medium and High severity (ISO 27001 compliance)
# Run with: uv run bandit -c pyproject.toml -r .